<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            style="@style/StatisticsRow">

            <TextView
                style="@style/GradeDetailTextViewLeft"
                android:text="@string/tv_average_label" />

            <TextView
                style="@style/GradeDetailTextViewRight"
                android:id="@+id/tv_average" />
            <View style="@style/Divider"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/StatisticsRow">

            <TextView
                style="@style/GradeDetailTextViewLeft"
                android:text="@string/tv_credit_points_label" />

            <TextView
                style="@style/GradeDetailTextViewRight"
                android:id="@+id/tv_credit_points" />
            <View style="@style/Divider"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/StatisticsRow">

            <TextView
                style="@style/GradeDetailTextViewLeft"
                android:text="@string/tv_credit_points_per_semester_label" />

            <TextView
                style="@style/GradeDetailTextViewRight"
                android:id="@+id/tv_credit_points_per_semester" />
            <View style="@style/Divider"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/StatisticsRow">

            <TextView
                style="@style/GradeDetailTextViewLeft"
                android:text="@string/tv_study_progress_label" />

            <TextView
                style="@style/GradeDetailTextViewRight"
                android:id="@+id/tv_study_progress" />
            <View style="@style/Divider"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/StatisticsRow">

            <TextView
                style="@style/GradeDetailTextViewLeft"
                android:text="@string/tv_grade_count_label" />

            <TextView
                style="@style/GradeDetailTextViewRight"
                android:id="@+id/tv_grade_count" />
            <View style="@style/Divider"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Credit Points Fortschritt"
            android:paddingLeft="16dp"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_credit_points"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Credit Points pro Semester"
            android:paddingLeft="16dp"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_credit_points_per_semester"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notendurchschnitt pro Semester"
            android:paddingLeft="16dp"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_average_grade_per_semester"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="8dp"/>
    </LinearLayout>
</ScrollView>