<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_accent"
    android:paddingTop="8dp"
    android:layout_marginBottom="-16dp">

    <LinearLayout
        android:id="@+id/info_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_box_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="4dp"/>

                <TextView
                    android:id="@+id/info_box_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_dismiss_info"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_close_white_24dp"
                android:tint="@color/text87"
                android:alpha="0.5"/>

        </LinearLayout>

        <View style="@style/Divider"/>
    </LinearLayout>

    <!-- Average -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_grades_average"
            android:textSize="20sp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/tv_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serf-medium"/>
    </LinearLayout>

    <!-- Credit points -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_credit_points"
            android:textSize="20sp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/tv_credit_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serf-medium"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/tv_max_credit_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_max_credit_points"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Last updated at -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:alpha="0.6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_last_updated_at"
            android:textSize="14sp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/tv_last_updated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- divider must be set here rather than as ItemDecoration,
    because of the negative margin (see outer LinearLayout) -->
    <View style="@style/Divider"/>

    <LinearLayout
        android:id="@+id/ll_no_grades_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_no_grades_found" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout"
            android:layout_marginTop="16dp"
            android:theme="@style/RobotoButtonStyle" />
    </LinearLayout>
</LinearLayout>